--- a/MiniProjectFile/Views/ImportSources/Index.cshtml
+++ b/MiniProjectFile/Views/ImportSources/Index.cshtml
@@ -1,15 +1,15 @@
 ﻿@model IEnumerable<MiniProjectFile.Models.ImportSource>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "ImportSources/Index";
 }
 
-<h1>Index</h1>
+<h1>ImportSource/Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary">Create New</a>
 </p>
-<table class="table">
+<table class="table table-bordered">
     <thead>
         <tr>
             <th>
@@ -55,9 +55,9 @@
                 @Html.DisplayFor(modelItem => item.CreatedOn)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" class="btn btn-warning" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
