--- a/MiniProjectFile/Views/Shared/_Layout.cshtml
+++ b/MiniProjectFile/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ImportSources" asp-action="Create">ImportSource</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ImportSources" asp-action="Index">ImportSource</a>
                         </li>
                     </ul>
                 </div>
