--- a/MiniProjectFile/Views/ImportSources/Create.cshtml
+++ b/MiniProjectFile/Views/ImportSources/Create.cshtml
@@ -4,50 +4,73 @@
     ViewData["Title"] = "Create";
 }
 
+
 <h1>Create</h1>
 
 <h4>ImportSource</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+ 
+    <div class="col-md-6">
         <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <div class="form-group">
+                <input type="file" id="file" name="file" />
+            </div>
+
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>      
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
+                <input asp-for="Name" id="_name"class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="FileName" class="control-label"></label>
-                <input asp-for="FileName" class="form-control" />
+                <input asp-for="FileName" id="fileName" class="form-control" />
                 <span asp-validation-for="FileName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="FilePath" class="control-label"></label>
-                <input asp-for="FilePath" class="form-control" />
+                <input asp-for="FilePath" id="filePath" class="form-control" />
                 <span asp-validation-for="FilePath" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="FileFormat" class="control-label"></label>
-                <input asp-for="FileFormat" class="form-control" />
+                <input asp-for="FileFormat" id="fileFormat" class="form-control" />
                 <span asp-validation-for="FileFormat" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CreatedBy" class="control-label"></label>
-                <input asp-for="CreatedBy" class="form-control" />
+                <input asp-for="CreatedBy" id="createdBy" class="form-control" />
                 <span asp-validation-for="CreatedBy" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <input asp-for="Column" type="hidden" id="columnarray" class="form-control"/>
+</div>
             <br>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary me-2" />
-                <a asp-action="Index" >Back to List</a>
 
             </div>
         </form>
+        <a asp-action="Index">Back to List</a>
+
+    </div>
+
+    <div class="col-md-4">
+        <h1>FileDetails</h1>
+        <div class="container" style="font-size:1em">
+        <table id="FileData" class="table table-dark"> </table>
+        </div>
+        <script type="text/javascript" src="https://unpkg.com/read-excel-file@5.x/bundle/read-excel-file.min.js"></script>
+        <script  src="~/js/File.js"></script>
     </div>
 </div>
 
 
+
+
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    
 }
