--- a/MiniProjectFile/Views/ImportSources/Details.cshtml
+++ b/MiniProjectFile/Views/ImportSources/Details.cshtml
@@ -1,5 +1,6 @@
 ﻿@model MiniProjectFile.Models.ImportSource
 
+
 @{
     ViewData["Title"] = "Details";
 }
@@ -46,6 +47,13 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.CreatedOn)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Column)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Column)
+        </dd>
+        
     </dl>
 </div>
 <div>
