--- a/MiniProjectFile/Views/Shared/_Layout.cshtml
+++ b/MiniProjectFile/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="ImportSources" asp-action="Index">ImportSource</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ImportSources" asp-action="Product">Product</a>
+                        </li>
                     </ul>
                 </div>
             </div>
