--- a/MiniProjectFile/Views/ImportSources/Index.cshtml
+++ b/MiniProjectFile/Views/ImportSources/Index.cshtml
@@ -58,6 +58,7 @@
                 <a asp-action="Edit" class="btn btn-warning" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Product" class="btn btn-dark" asp-route-id="@item.Id">Mapping</a>
             </td>
         </tr>
 }
