--- a/MiniProjectFile/Views/ImportSources/Product.cshtml
+++ b/MiniProjectFile/Views/ImportSources/Product.cshtml
@@ -1,50 +1,72 @@
-﻿@model List<MiniProjectFile.Models.CustomModel>
-
-
-<div class="container-fluid">
-    <h1 class="">ProductList</h1>
-    <select name="sFile" id="sFile">
-       @* @foreach(var item in Model)
-            {
-                    <option value="@item.">@item.</option>
-            }
-*@
-    </select>
-    <br />
-    <div class="row">
+﻿@model MiniProjectFile.Models.CustomModel
+<h2>Working File: @Model.ImportSource[0].Name (@Model.ImportSource[0].Id)</h2>
+<div class="row">
     <div class="col-4">
         <h2>ImportColumns</h2>
+
         
-            <select name="Icolumn" id="Icolumn" class="form-select">
-                
-                
-                @foreach(var item in Model)
-            {
-                    <option value="@item.ColumnModel.ImportSourceId">@item.ColumnModel.HeaderName</option>
-            }
+
+        @for (int i = 0; i < Model.ColumnModel.Count(); i++)
+        {
+            int j = 0;
+            <select name="Icolumn" class="Icolumn form-select">
+
+
+                @foreach (var item in Model.ColumnModel)
+                {
+                   
+                    if (i == j)
+                    {
+                        <option value="@item.Id" selected>@item.HeaderName</option>
+                    }
+                    else
+                    {
+                        <option value="@item.Id">@item.HeaderName</option>
+                        
+
+                    }
+                    j++;
+                }
             </select>
+           
+        }
+
+       
+        
+
     </div>
     <div class="col-4">
         <h2>TableColumn</h2>
-            <select name="Tcolumn" id="Tcolumn" class="form-select">
-            @foreach(var item in Model)
-            {
-                    <option value="@item">@item</option>
-            }
-            </select>
-            
 
-         @* @{
-                List<string> listItems = new List<string>();
-                @foreach (var item in Model)
+            @for(int i=0;i<Model.ColumnModel.Count();i++){
+            <select name="Tcolumn" class="Tcolumn form-select">
+                <option value="" disabled selected>Select your option</option>
+                @foreach (var item in Model.ListDropDowns)
                 {
-                    listItems.Add(item);
-                }
-            }
+                 <option value="@item.Value">@item.Text</option>
+                } 
+            </select>
+    
+            }    
 
-            @Html.DropDownList("yourDropName", listItems, new { @class = "form-control" })*@
-        </div>
+
+        @* @{
+        List<string> listItems = new List<string>();
+        @foreach (var item in Model)
+        {
+        listItems.Add(item);
+        }
+        }
+
+        @Html.DropDownList("yourDropName", listItems, new { @class = "form-control" })*@
     </div>
-            <button type="submit" id="BtnSave" class="btn btn-primary float-end">Save</button>
-
 </div>
+<input id="btnSave" type="button"  class="btn btn-primary float-end" value="Map" />
+
+<form asp-action="Save">
+<input asp-for="@Model.ListDropDowns[0].Text" id="data" type="text" name="data"/>
+    <input type="submit" value="Save" class="btn btn-primary me-2" />
+
+</form>
+<script src="~/js/Map.js"> </script>
+
