--- a/MiniProjectFile/Views/ImportSources/Create.cshtml
+++ b/MiniProjectFile/Views/ImportSources/Create.cshtml
@@ -48,8 +48,9 @@
                 <input asp-for="Column" type="hidden" id="columnarray" class="form-control"/>
 </div>
             <div class="form-group">
-                <input asp-for="TableData" type="hidden" id="TableData" class="form-control" />
+                <input asp-for="TableData" id="TableData" class="form-control" />
             </div>
+            
             <br>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary me-2" />
