--- a/MiniProjectFile/Views/ImportSources/Index.cshtml
+++ b/MiniProjectFile/Views/ImportSources/Index.cshtml
@@ -59,6 +59,7 @@
                 <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">Delete</a>
                 <a asp-action="Product" class="btn btn-dark" asp-route-id="@item.Id">Mapping</a>
+                    <a asp-action="DataInsert" class="btn btn-outline-success" asp-route-id="@item.Id">DataInsert</a>
             </td>
         </tr>
 }
