--- a/MiniProjectFile/Views/ImportSources/DataInsert.cshtml
+++ b/MiniProjectFile/Views/ImportSources/DataInsert.cshtml
@@ -2,4 +2,5 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    <h1> Data Inserted</h1>
 }
