Table JQuery Project Almost Completed

--- a/MiniProjectFile/Views/ImportSources/DataView.cshtml
+++ b/MiniProjectFile/Views/ImportSources/DataView.cshtml
@@ -1,19 +1,18 @@
 ﻿@model IEnumerable<MiniProjectFile.Models.ProductTable>
-<h1>AllData</h1>
-<table class="table table-striped cell-border" id="dataTable">
+<h1>DataView</h1>
+<table class="table table-primary cell-border" id="dataTable">
     <thead>
         <tr>
             <th>
                 Image
             </th>
-           
             <th>
                 ProductId
             </th>
             <th>
                 Title
             </th>
-           
+
             <th>
                 Price
             </th>
@@ -26,10 +25,7 @@
             <th>
                 Color
             </th>
-            <th>
-                Size
-            </th>
-            
+
         </tr>
     </thead>
     <tbody>
@@ -37,16 +33,15 @@
         {
             <tr>
                 <td>
-                  <a href="@Html.DisplayFor(modelItem=>item.Link)"> <img src="@Html.DisplayFor(modelItem => item.ImageLink)"height="80px"></a>
+                    <img src="@Html.DisplayFor(modelItem => item.ImageLink)" height="80px">
                 </td>
-                
                 <td>
                     @Html.DisplayFor(modelItem => item.ProductId)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Title)
                 </td>
-                
+
                 <td>
                     $@Html.DisplayFor(modelItem => item.Price)
                 </td>
@@ -58,9 +53,6 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Color)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Size)
                 </td>
             </tr>
         }
